2022.1.19 Rendering 30000x24000 crash after denoise finish #95042

Closed
opened 2022-01-19 05:31:22 +01:00 by fxzt · 9 comments

2022.1.19_merge_HDR_test_I.crash.txt

2022.1.19_blender_system_info.txt

2022.1.19_blender_debug_output.txt

{F12811022}System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.47

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-18 22:23, hash: 2e5aecf557
Worked: (newest version of Blender that worked as expected)

Short description of error
当渲染完成时 从磁盘调度缓冲时 发生崩溃
A crash occurs when full buffering is scheduled from disk when rendering is complete

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

[2022.1.19_merge_HDR_test_I.crash.txt](https://archive.blender.org/developer/F12811019/2022.1.19_merge_HDR_test_I.crash.txt) [2022.1.19_blender_system_info.txt](https://archive.blender.org/developer/F12811018/2022.1.19_blender_system_info.txt) [2022.1.19_blender_debug_output.txt](https://archive.blender.org/developer/F12811017/2022.1.19_blender_debug_output.txt) {[F12811022](https://archive.blender.org/developer/F12811022/QQ截图20220119122735.png)}**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA RTX A6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.47 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-18 22:23, hash: `2e5aecf557` Worked: (newest version of Blender that worked as expected) **Short description of error** 当渲染完成时 从磁盘调度缓冲时 发生崩溃 A crash occurs when full buffering is scheduled from disk when rendering is complete **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @fxzt

Added subscriber: @fxzt

Added subscribers: @ThomasDinges, @deadpin

Added subscribers: @ThomasDinges, @deadpin

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This is most likely an integer overflow in the following location:

Code

void BlenderOutputDriver::write_render_tile(const Tile &tile)

...

  vector<float> pixels(tile.size.x * tile.size.y * 4);

MSVC warning
Warning C26451 Arithmetic overflow: Using operator '*' on a 4 byte value and then casting the result to a 8 byte value. Cast the value to the wider type before calling operator '*' to avoid overflow (io.2). bf_intern_cycles C:\Users\jesse\source\blender-git\blender\intern\cycles\blender\output_driver.cpp 112

Undefined behavior sanitizer
runtime error: signed integer overflow: 720000000 * 4 cannot be represented in type 'int'

CC @ThomasDinges

This is most likely an integer overflow in the following location: Code ``` void BlenderOutputDriver::write_render_tile(const Tile &tile) ... vector<float> pixels(tile.size.x * tile.size.y * 4); ``` MSVC warning ```Warning C26451 Arithmetic overflow: Using operator '*' on a 4 byte value and then casting the result to a 8 byte value. Cast the value to the wider type before calling operator '*' to avoid overflow (io.2). bf_intern_cycles C:\Users\jesse\source\blender-git\blender\intern\cycles\blender\output_driver.cpp 112 ``` Undefined behavior sanitizer `runtime error: signed integer overflow: 720000000 * 4 cannot be represented in type 'int'` CC @ThomasDinges

Added subscriber: @Wovchick

Added subscriber: @Wovchick

Added subscriber: @Sergey

Added subscriber: @Sergey

Thanks for the investigation @deadpin

@Sergey Can you check please? I tried to add some casts, but couldn't fix the crash yet.

Thanks for the investigation @deadpin @Sergey Can you check please? I tried to add some casts, but couldn't fix the crash yet.

This issue was referenced by f179637222

This issue was referenced by f179637222d1432b09c3c23201e1b7b75215b11a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sergey Sharybin self-assigned this 2022-01-19 16:03:57 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95042
No description provided.