Fix T95042: Rendering high-res image in Cycles crashes

Integer overflow when the final frame is handled by the Blender's
output driver.

Thanks Jesse and Thomas for investigation!